finalizado para apresentacao ao tutor

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,12 @@
  .container-app{
     background-color: #5214CC;
  }
+
+ .box-dashboard{
+   min-height: 95vh;
+ }
+
+
  .box-overflow{
     max-height: 100vh;
     overflow-y: auto;
