--- a/app/views/matriculas/index.html.erb
+++ b/app/views/matriculas/index.html.erb
@@ -10,15 +10,18 @@
   </div>
 </div>
 
-<div class="row mt-4">
-    <div class="w-50">
-    <ul class="list-group list-group-sm ">
-        <% @matriculas.each do |key, matricula|%>
+<div class="row mt-4 mb-4">
+    <div class="">
+    <ul class="list-group list-group-horizontal-sm d-flex flex-wrap">
       
+      
+      <% @matriculas.each do |key, matricula|%>
         <li class="list-group-item list-group-item-light">
             Matrícula: 
-            <a href="alunos/<%=key%>" class="btn btn-primary ms-5"><%=key%></a></li>
-        <% end %>
+            <a href="alunos/<%=key%>" class="btn btn-primary ms-5"><%=key%></a>
+        </li>
+     <% end %>
+       
     </ul>
     </div>
 </div>
